-rotate works well with all components, first coordinate is used as center of rotation. Next part will be defining ceneter of rotation